# dbgif-server

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.claude/agents/: cargo-build-fixer.md
.claude/commands/: specify.md  tasks.md
.specify/templates/: plan-template.md
benches/: transport_benchmarks.rs
dbgif-integrated-test/: Cargo.toml  README.md
dbgif-integrated-test/examples/: basic_usage.rs  config.yaml  performance_test.rs
dbgif-integrated-test/src/: config.rs  lib.rs
dbgif-integrated-test/src/client/: ascii.rs  connection.rs  mod.rs
dbgif-integrated-test/src/device/: lifecycle.rs  mod.rs  server.rs
dbgif-integrated-test/src/process/: mod.rs
dbgif-integrated-test/src/scenarios/: advanced.rs  basic.rs  connection.rs  mod.rs  performance.rs
dbgif-integrated-test/src/utils/: logging.rs  mod.rs  ports.rs
dbgif-protocol/: Cargo.toml
dbgif-protocol-core/: Cargo.toml  README.md  build.rs  cbindgen.toml
dbgif-protocol-core/examples/: embedded_usage.c
dbgif-protocol-core/include/: dbgif_protocol.h
dbgif-protocol-core/src/: commands.rs  crc.rs  decoder.rs  encoder.rs  error.rs  ffi.rs  header.rs  lib.rs  state.rs
dbgif-protocol-core/tests/: encoder_test.rs  ffi_wrapper_test.rs  state_machine_test.rs  streaming_test.rs
dbgif-protocol/src/: ascii.rs  error.rs  lib.rs  message.rs  mod.rs
dbgif-protocol/tests/: test_adb_message.rs  test_commands.rs  test_crc32.rs  test_endianness.rs
dbgif-server/: Cargo.toml
dbgif-server/src/: config.rs  lib.rs
dbgif-server/src/host_services/: device.rs  features.rs  list.rs  mod.rs  version.rs
dbgif-server/src/server/: ascii_handler.rs  connection_manager.rs  device_manager.rs  device_registry.rs  discovery.rs  dispatcher.rs  heartbeat.rs  message_handler.rs  mod.rs  session.rs  state.rs  stream.rs  stream_forwarder.rs
dbgif-server/tests/: test_host_services.rs
dbgif-server/tests/integration/: test_device_forwarding.rs  test_multi_client.rs  test_performance.rs
dbgif-transport/: Cargo.toml
dbgif-transport/src/: lib.rs  tcp.rs  tcp_connection.rs
dbgif-transport/tests/: test_tcp_transport.rs
docs/: ADB_Architecture_Protocol.md  PING_PONG_Keep_Alive.md  PL2501.md  PL25A1-note.md  PL25A1.md  integrated-test-api.md  integrated-test-plan.md  integrated-test-tracking.md  loopback_client_plan.md  nusb-migration-plan.md  protocol.md  rusb-vs-nusb-comparison.md  workspace-integration-guide.md
examples/: debug_demo.rs  loopback_client.rs  pl25a1_loopback.rs  simple_loopback_test.rs
scripts/: run-performance-tests.sh
specs/001-dbgif-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dbgif-server/contracts/: protocol-spec.md
specs/001-pl25a1-usb-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pl25a1-usb-bridge/contracts/: adb_protocol.rs  daemon_api.rs  transport_factories.rs  transport_trait.rs
specs/002-usb-hotplug/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-usb-hotplug/contracts/: README.md  discovery_events.rs  hotplug_events.rs
specs/004-tcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tcp/contracts/: cli-interface.md  protocol-behavior.md
src/: config.rs  contract.rs  daemon.rs  lib.rs  logging.rs  main.rs  shutdown.rs
src/connection/: client_handler.rs  mod.rs  server.rs  stream.rs  usb.rs
src/discovery/: coordinator.rs  mod.rs
src/host_services/: device.rs  features.rs  list.rs  mod.rs  version.rs
src/protocol/: ascii.rs  checksum.rs  commands.rs  constants.rs  crc.rs  error.rs  handshake.rs  host_commands.rs  message.rs  mod.rs  parser.rs  serializer.rs  stream.rs
src/server/: ascii_handler.rs  client_handler.rs  connection_manager.rs  device_manager.rs  device_registry.rs  discovery.rs  dispatcher.rs  heartbeat.rs  host_commands.rs  limits.rs  message_handler.rs  mod.rs  server.rs  session.rs  shutdown.rs  state.rs  stream.rs  stream_forwarder.rs  tcp_server.rs
src/services/: host_service.rs  mod.rs
src/session/: auth.rs  manager.rs  mod.rs  multiplexer.rs
src/test_client/: cli.rs  connection.rs  executor.rs  mod.rs  reporter.rs
src/test_client/commands/: host.rs  mod.rs  multi.rs  ping.rs
src/test_client/models/: mod.rs  protocol.rs  result.rs  session.rs  types.rs
src/transport/: android_usb.rs  bridge_usb.rs  connection.rs  debug.rs  echo_transport.rs  loopback.rs  manager.rs  mock_transport.rs  mod.rs  tcp.rs  tcp_connection.rs  tcp_transport.rs  usb_bridge_transport.rs  usb_common.rs  usb_device_transport.rs  usb_monitor.rs
src/transport/hotplug/: detection.rs  events.rs  mod.rs
src/utils/: hex_dump.rs  mod.rs
tests/: performance_validation.rs  test_ascii_protocol.rs  test_cli_ping.rs  unit_test_models.rs  unit_test_reporter.rs
tests/common/: mod.rs
tests/contract/: test_adb_message.rs  test_adb_protocol.rs  test_cli_aging.rs  test_cli_host.rs  test_cli_multi.rs  test_commands.rs  test_crc32.rs  test_daemon_api.rs  test_discovery_integration.rs  test_endianness.rs  test_host_services.rs  test_hotplug_events.rs  test_protocol_handshake.rs  test_protocol_validation.rs  test_tcp_transport.rs  test_transport_factories.rs  test_transport_trait.rs
tests/e2e/: test_command_forwarding.rs  test_connection_lifecycle.rs  test_device_listing.rs
tests/integration/: test_adb_session.rs  test_concurrent_connections.rs  test_connection.rs  test_daemon_connections.rs  test_daemon_server.rs  test_device_forwarding.rs  test_echo_transport.rs  test_error_handling.rs  test_host_services.rs  test_hotplug_basic.rs  test_multi_client.rs  test_performance.rs  test_single_connection.rs  test_streams.rs  test_tcp_transport.rs  test_usb_bridge_transport.rs  test_usb_device_transport.rs
tests/unit/: test_discovery_events.rs  test_utils.rs
