[package]
name = "dbgif-protocol"
version = "0.1.0"
edition = "2021"
authors = ["DBGIF Team"]
license = "MIT"
repository = "https://github.com/your-org/dbgif-server"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
crc32fast = "1.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[[bin]]
name = "dbgif-server"
path = "src/bin/dbgif-server.rs"

[[bin]]
name = "dbgif-test-client"
path = "src/bin/dbgif-test-client.rs"

[[bin]]
name = "tcp-device-test-server"
path = "src/bin/tcp-device-test-server.rs"

[lib]
name = "dbgif_protocol"
path = "src/lib.rs"

[[test]]
name = "test_adb_message"
path = "tests/contract/test_adb_message.rs"

[[test]]
name = "test_crc32"
path = "tests/contract/test_crc32.rs"

[[test]]
name = "test_commands"
path = "tests/contract/test_commands.rs"

[[test]]
name = "test_endianness"
path = "tests/contract/test_endianness.rs"

[[test]]
name = "test_tcp_transport"
path = "tests/contract/test_tcp_transport.rs"

[[test]]
name = "test_host_services"
path = "tests/contract/test_host_services.rs"