[workspace]
members = [
    "dbgif-protocol",
    "dbgif-transport",
    "dbgif-server",
    "dbgif-integrated-test",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
crc32fast = "1.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"