[package]
name = "dbgif-protocol-core"
version = "0.1.0"
edition = "2021"
authors = ["Luke Lee"]
license = "MIT"

[dependencies]
# CRC32 with no_std support
crc32fast = { version = "1.4", default-features = false }

[features]
default = ["std", "ffi"]
std = []
ffi = []

[dev-dependencies]
# For testing only
rand = "0.8"