[package]
name = "dbgif-server"
version = "0.1.0"
edition = "2021"
authors = ["DBGIF Team"]
license = "MIT"
repository = "https://github.com/your-org/dbgif-server"

[dependencies]
dbgif-protocol = { path = "../dbgif-protocol" }
dbgif-transport = { path = "../dbgif-transport" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
crc32fast = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "dbgif-server"
path = "src/bin/dbgif-server.rs"

[[bin]]
name = "dbgif-test-client"
path = "src/bin/dbgif-test-client.rs"

[[bin]]
name = "tcp-device-test-server"
path = "src/bin/tcp-device-test-server.rs"