[package]
name = "dbgif-server"
version = "0.1.0"
edition = "2021"
authors = ["DBGIF Team"]
license = "MIT"
repository = "https://github.com/your-org/dbgif-server"

[dependencies]
dbgif-protocol = { path = "../dbgif-protocol" }
dbgif-transport = { path = "../dbgif-transport" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "dbgif-server"
path = "src/bin/dbgif-server.rs"