[package]
name = "dbgif-transport"
version = "0.1.0"
edition = "2021"
authors = ["DBGIF Team"]
license = "MIT"
repository = "https://github.com/your-org/dbgif-server"

[dependencies]
dbgif-protocol = { path = "../dbgif-protocol" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.0"